# k4a_recorder_epoch_timestamp

./: CMakeLists.txt  Findk4arecord.cmake  LICENSE  README.md  version.rc.in
src/: recorder.cpp
